[package]
name = "srv-alarm"
version = "0.1.0"
authors = ["Jens Willemsens <jens@jensw.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.4"
rumqttc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sunrise-common = { path = "../sunrise-common" }
tokio = { version = "0.2", features = ["macros"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"