[package]
name = "srv-alarm"
version = "0.1.0"
authors = ["Jens Willemsens <jens@jensw.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rumqttc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sunrise-common = { path = "../sunrise-common" }
tokio = { version = "0.2", features = ["macros", "time"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "clock", "serde"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json"]

[dependencies.warp]
version = "0.2"
default-features = false
features = ["multipart"]