[package]
name = "srv-audio"
version = "0.1.0"
authors = ["Jens Willemsens <jens@jensw.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rodio = "0.13"
sunrise-common = { path = "../sunrise-common" }
tokio = { version = "1.0", features = ["macros"] }

[dependencies.warp]
version = "0.2"
default-features = false
features = ["multipart"]