[package]
name = "srv-config"
version = "0.1.0"
authors = ["Jens Willemsens <jens@jensw.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rumqttc = "0.4"
rustbreak = {version = "2.0", features = ["ron_enc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sunrise-common = { path = "../sunrise-common" }
tokio = { version = "1.0", features = ["macros"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.warp]
git = "https://github.com/seanmonstar/warp"
default-features = false
features = ["multipart"]

[dev-dependencies]
tempfile = "3.2"